2012-02-27  Jesse Kornblum  <research@jessekornblum.com>:

	* main.cpp: Removed -B command line flag from all programs

2012-02-27  Jesse Kornblum  <research@jessekornblum.com>:

	* man/md5deep.1: Added Simson to the AUTHORS section
	* src/main.cpp: Formatted usage messages
	* configure.ac: Version bump to 4.1.1
	* Makefile.am: Added doc to directories cleaned with make nice

2012-02-26  Simson Garfinkel  <simsong@FC15>

	* src/main.h (d): fixed THREAD typo.
	* src/display.cpp: changed #if so that it checks for MINGW and not __MINGW_H
	* configure.ac (MINGW): now explicitly sets MINGW if we are compiling under mingw.

2012-02-10  Jesse Kornblum  <research@jessekornblum.com>:

	* doc/start-hashdeep.html: Clarified how to run the programs.
	
2012-02-10  Jesse Kornblum  <research@jessekornblum.com>:

	* sample-hashes/sample.{c,jpg}: Added Windows executable with non-executable extension
	* src/winpe.cpp, main.cpp, dig.cpp: Added comments
	* configure.ac: Version bump to 4.1
	* src/*.cpp: Added $Id$ tags

2012-02-08  Jesse Kornblum  <research@jessekornblum.com>:

	* src/dig.cpp, winpe.h, winpe.cpp, main.cpp: Added check for Windows PE files to expert mode.

2012-01-30  Jesse Kornblum  <research@jessekornblum.com>:

	* src/display.cpp: Reverted previous change, but updated test for presence of vasprintf.

2012-01-29  Jesse Kornblum  <research@jessekornblum.com>:

	* src/dig.cpp: Check for junction points before adding files to queue
	* src/display.cpp: Removed redefinition of vasprintf. It is apparently now part of the compiler's stdio.h

2012-01-28  Jesse Kornblum  <research@jessekornblum.com>:

	* configure.ac: Version bump to 4.0.2-001

2012-01-28  Simson Garfinkel  <simsong@mucha>

	* src/display.cpp (display::dfxml_write): strange; sstream should have been stringstream. Well, it's fixed now.

2012-01-23  Simson Garfinkel  <simsong@Mucha.local>

	* src/helpers.cpp: successfully removed itos().

2012-01-22  Jesse Kornblum  <research@jessekornblum.com>:
